--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,7 +15,7 @@ worklistViewTitle=Manage BusinessPartnerSet
 worklistTitle=Manutenção de Parceiros
 
 #XTIT: Table view title
-worklistTableTitle=BusinessPartnerSet
+worklistTableTitle=|Parceiros
 
 #XTOL: Tooltip for the search field
 worklistSearchTooltip=Enter an BusinessPartnerSet name or a part of it.
@@ -24,7 +24,7 @@ worklistSearchTooltip=Enter an BusinessPartnerSet name or a part of it.
 worklistNoDataWithSearchText=No matching BusinessPartnerSet found
 
 #XTIT: Table view title with placeholder for the number of items
-worklistTableTitleCount=BusinessPartnerSet ({0})
+worklistTableTitleCount=Parceiros ({0})
 
 #XTIT: The title of the column containing the PartnerId of BusinessPartnerSet
 tableNameColumnTitle=ID
@@ -52,6 +52,32 @@ objectTitle=BusinessPartnerSet
 
 #XTIT: Label for the PartnerId
 PartnerIdLabel=PartnerId
+
+#FORM = textos do formulario
+txtBPDetail=Detalhes do Parceiro
+txtCentralData=Dados Centrais
+txtAddressData=Endereço
+txtPartnerId=ID
+txtPartnerType=Tipo do Parceiro
+txtPartnerName=Nome
+txtSearchTerm=Termo de Pesquisa
+txtStreet=Logradouro
+txtHouseNumber=Número
+txtDistrict=Bairro
+txtCity=Cidade
+txtRegion=Região
+txtZipCode=CEP
+txtCountry=País
+
+btnEdit=Processar
+btnSave=Salvar
+btnCancel=Cancelar
+
+msgBPUpdated=Parceiro alterado com sucesso
+txtBPUpdated=Sucesso
+msgBPUpdError=Erro ao alterar o Parceiro
+
+
 
 
 
