--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -77,6 +77,12 @@ msgBPUpdated=Parceiro alterado com sucesso
 txtBPUpdated=Sucesso
 msgBPUpdError=Erro ao alterar o Parceiro
 
+btnCreate=Novo
+txtNewTitle=Novo Parceiro
+btnClose=Fechar
+txtBPCreated=Sucesso
+msgBPCreated=Parceiro de negócio {0} criado com sucesso
+msgBPCrtError=Erro ao criar o Parceiro
 
 
 
